# goose_game

students/: CMakeLists.txt  informe.md
students/resources/: basic.txt  line_error.txt
students/src/headers/: board.h  board_dynamic.h  board_static.h  board_utils.h  common.h  file_manager.h  game.h  menu.h  player.h  sequence.h  square.h  state.h  utils.h
students/src/sources/: board_dynamic.c  board_static.c  board_utils.c  file_manager.c  game.c  main.c  menu.c  player.c  sequence.c  square.c  state.c  utils.c
